force-app/main/default/objects/RE_Route_Backbone__c/RE_Route_Backbone__c.object-meta.xml
<CustomObject>
    <label>RE Route Backbone</label>
    <nameField>
        <displayFormat>RE_RB-{0000000}</displayFormat>
        <label>Route Backbone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Route Backbones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>