force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_CO_Steer__c.field-meta.xml
<CustomField>
    <fullName>RE_CO_Steer__c</fullName>
    <label>CO Steer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>