force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_CO_Steer_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>RE_CO_Steer_Valid_From__c</fullName>
    <label>CO Steer Valid From</label>
    <type>Date</type>
</CustomField>