force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_Country__c.field-meta.xml
<CustomField>
    <fullName>RE_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Route_Backbones1</relationshipName>
    <type>Lookup</type>
</CustomField>