force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_Demmurage__c.field-meta.xml
<CustomField>
    <fullName>RE_Demmurage__c</fullName>
    <label>Demmurage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>