force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Destination_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Name</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipName>Route_Backbones1_del</relationshipName>
    <type>Lookup</type>
</CustomField>