force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_Misc_Route_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_Misc_Route_Cost__c</fullName>
    <label>Misc Route Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>