force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_MY_BreakBulk_Premium_Quote__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_BreakBulk_Premium_Quote__c</fullName>
    <label>BreakBulk Premium Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakbulk Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>