force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_MY_Comments__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>