force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_MY_Freight_Charges__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Freight_Charges__c</fullName>
    <label>Freight &amp; Pipeline Charges</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>