force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_MY_Market_Premium_Quote__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Market_Premium_Quote__c</fullName>
    <label>Market Premium Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH RON PREMIUM</fullName>
            </value>
            <value>
                <fullName>MID RON PREMIUM</fullName>
            </value>
            <value>
                <fullName>Kero Premium</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.05% Premium</fullName>
            </value>
            <value>
                <fullName>Gasoil 0.001% Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>