force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_MY_Primary_Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Primary_Transport_Cost__c</fullName>
    <label>Primary Transport Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>