force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_MY_Small_lot_percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Small_lot_percentage__c</fullName>
    <label>Small lot %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>