force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_MY_Small_lot_premium__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Small_lot_premium__c</fullName>
    <label>Small lot premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>