force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_MY_Storage_Handling_Cost_OSP__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Storage_Handling_Cost_OSP__c</fullName>
    <label>Storage &amp; Handling Cost (OSP)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>