force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_MY_Storage_Handling_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Storage_Handling_Unit__c</fullName>
    <label>Storage &amp; Handling Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Rate_Unit_Set</valueSetName>
    </valueSet>
</CustomField>