force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_Route_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Route_Name__c</fullName>
    <label>Route Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>