force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_Route_Utilization__c.field-meta.xml
<CustomField>
    <fullName>RE_Route_Utilization__c</fullName>
    <label>Route Utilization</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>