force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Source_Code__c</fullName>
    <formula>RE_Source_Name__r.RE_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Code</label>
    <type>Text</type>
</CustomField>