force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Source_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Name</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipName>Route_Backbones</relationshipName>
    <type>Lookup</type>
</CustomField>