force-app/main/default/objects/RE_Route_Backbone__c/fields/RE_Source_Steer__c.field-meta.xml
<CustomField>
    <fullName>RE_Source_Steer__c</fullName>
    <label>Source Steer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>