force-app/main/default/objects/RE_Route_Backbone__c/fields/RT_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Product_Code__c</fullName>
    <formula>RE_Product_Name__r.RT_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>