force-app/main/default/objects/RE_Route_Backbone__c/fields/RT_RefineryDescription__c.field-meta.xml
<CustomField>
    <fullName>RT_RefineryDescription__c</fullName>
    <label>Refinery Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>