force-app/main/default/objects/RE_Route_Backbone__c/recordTypes/Malaysia.recordType-meta.xml
<RecordType>
    <fullName>Malaysia</fullName>
    <active>true</active>
    <label>Malaysia</label>
</RecordType>