force-app/main/default/objects/RE_Route_Backbone__c/recordTypes/Singapore.recordType-meta.xml
<RecordType>
    <fullName>Singapore</fullName>
    <active>true</active>
    <label>Singapore</label>
</RecordType>