force-app/main/default/objects/RE_Route_Backbone__c/recordTypes/Turkey.recordType-meta.xml
<RecordType>
    <fullName>Turkey</fullName>
    <active>true</active>
    <description>Revolution Turkey Record Type</description>
    <label>Turkey</label>
</RecordType>