force-app/main/default/objects/RE_Route_Backbone__c/validationRules/RE_CO_Steer_Input_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>RE_CO_Steer_Input_Check</fullName>
    <active>true</active>
    <errorConditionFormula>( ISBLANK( RE_CO_Steer__c ) &amp;&amp; NOT(ISPICKVAL( RE_MY_CO_Steer_Unit__c , &apos;&apos;) ) ) || ( ( NOT ( ISBLANK( RE_CO_Steer__c ) ) &amp;&amp; ISPICKVAL( RE_MY_CO_Steer_Unit__c , &apos;&apos;) ) )</errorConditionFormula>
    <errorMessage>Please Enter CO Steer Value and Unit, both.</errorMessage>
</ValidationRule>