force-app/main/default/objects/RE_Route_Backbone__c/validationRules/Turkey_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Turkey_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &apos;Turkey&apos;
&amp;&amp;  (ISBLANK(RE_Source_Name__c) || ISBLANK(RE_Product_Name__c) || ISBLANK(RE_Depot_Name__c))</errorConditionFormula>
    <errorMessage>Source / Depot / Product can&apos;t contain null or invalid value</errorMessage>
</ValidationRule>