force-app/main/default/objects/RE_Route_Backbone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Country__c</columns>
    <columns>RE_Demmurage__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Freight_Charges__c</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Route_Utilization__c</columns>
    <columns>RE_Source_Name__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Route_Backbone__c.Malaysia</value>
    </filters>
    <filters>
        <field>RE_Valid_To__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2022</value>
    </filters>
    <filters>
        <field>RE_Valid_From__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </filters>
    <label>All</label>
</ListView>