force-app/main/default/objects/RE_Route_Backbone__c/listViews/Thailand.listView-meta.xml
<ListView>
    <fullName>Thailand</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Source_Name__c</columns>
    <columns>RE_Destination_Name__c</columns>
    <columns>RE_MY_Primary_Transport_Cost__c</columns>
    <columns>RE_MY_Primary_Transport_Unit__c</columns>
    <columns>RE_Route_Utilization__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_Route_Backbone__c.Thailand</value>
    </filters>
    <label>Thailand</label>
</ListView>